SharpDj.Server/k8s/server/sharpdj-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: sharpdj-net
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/sharpdj-net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/sharpdj-net: "true"
